--- a/index.html
+++ b/index.html
@@ -72,5 +72,8 @@
       <footer>
          &COPY;2023 my first website
       </footer>
+      <footer>
+         &COPY;2023 my  website
+      </footer>
    </body>
 </html>
